--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 @import "header";
 @import "nav";
 @import "button";
-@import "decor";
+@import "logo";
 @import "line";
 @import "about-us";
 @import "features";
