--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -25,8 +25,9 @@
     width: 100%;
     border: none;
     border-radius: 3px;
-    line-height: 15px;
-    padding: 15px;
+    font-size: 18px;
+    line-height: 18px;
+    padding: 12px;
     color: $grey-text-color;
     margin-bottom: 15px;
     transition: box-shadow $transition-duration $easy-function;
@@ -46,12 +47,17 @@
 
 @media (min-width: $screen-width-medium) {
   .contact {
+    padding: 45px 20px;
+
     &__title {
-      line-height: 70px;
+      font-size: 30px;
+      line-height: 60px;
     }
 
     &__text {
-      line-height: 70px;
+      font-size: 15px;
+      line-height: 30px;
+      margin-bottom: 30px;
     }
 
     &__form {
@@ -59,7 +65,6 @@
       justify-content: space-between;
       margin: auto;
       width: 585px;
-      margin-bottom: 30px;
     }
 
     &__input {
