--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -22,6 +22,25 @@
   height: 65px;
   background-color: $dark-text-color;
 
+  &__logo {
+    width: 40px;
+    height: 40px;
+    background-color: $dark-text-color;
+    border: 2px solid $orange-color;
+
+    &::before {
+      width: 60px;
+      height: 20px;
+      background-color: $dark-text-color;
+    }
+
+    &::after {
+      width: 27px;
+      height: 27px;
+      background-color: $orange-color;
+    }
+  }
+
   &__toggle {
     width: 40px;
     height: 40px;
