--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -10,10 +10,12 @@
   border-radius: 3px;
   background-color: $orange-color;
   border: 1px solid $orange-color;
-  transition: background-color $transition-duration $easy-function;
+  transition: background-color $transition-duration $easy-function,
+    color $transition-duration $easy-function;
   cursor: pointer;
 
   &:hover {
     background-color: $white-color;
+    color: $orange-color;
   }
 }
